--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "postcss-sprites": "^3.1.2",
     "gulp-size": "^2.1.0",
     "gulp-clean-css": "^2.0.6",
-    "gulp-csslint": "^0.3.0"
+    "gulp-csslint": "^0.3.0",
+    "run-sequence": "^1.2.2"
   }
 }
