--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "del": "^2.2.0",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-base64": "^0.1.3",
+    "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
     "postcss-sprites": "^3.1.2",
     "gulp-size": "^2.1.0",
