--- a/package.json
+++ b/package.json
@@ -1,16 +1,19 @@
 {
   "name": "template",
   "dependencies": {
-    "gulp": "^3.9.1",
     "del": "^2.2.0",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-base64": "^0.1.3",
-    "gulp-plumber": "^1.1.0",
-    "gulp-postcss": "^6.1.0",
-    "postcss-sprites": "^3.1.2",
-    "gulp-size": "^2.1.0",
+    "gulp-change": "^1.0.0",
     "gulp-clean-css": "^2.0.6",
     "gulp-csslint": "^0.3.0",
+    "gulp-plumber": "^1.1.0",
+    "gulp-postcss": "^6.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-svgmin": "^1.2.2",
+    "gulp-svgstore": "^6.0.0",
+    "postcss-sprites": "^3.1.2",
     "run-sequence": "^1.2.2"
   }
 }
