--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp-size": "^2.1.0",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
+    "postcss": "^5.2.0",
+    "postcss-cssnext": "^2.8.0",
     "postcss-sprites": "^3.1.2",
     "run-sequence": "^1.2.2"
   }
