--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
     "gulp-base64": "^0.1.3",
     "gulp-change": "^1.0.0",
     "gulp-clean-css": "^2.0.6",
-    "gulp-csslint": "^0.3.0",
     "gulp-plumber": "^1.1.0",
     "gulp-postcss": "^6.1.0",
     "gulp-size": "^2.1.0",
+    "gulp-stylelint": "^3.2.0",
     "gulp-svgmin": "^1.2.2",
     "gulp-svgstore": "^6.0.0",
     "postcss-cssnext": "^2.8.0",
