--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -15,6 +15,7 @@
     "block-closing-brace-newline-before": "always-multi-line",
     "block-closing-brace-space-before": "always-single-line",
     "block-opening-brace-newline-after": "always-multi-line",
+    "block-opening-brace-space-before": "always",
     "block-opening-brace-space-after": "always-single-line",
     "color-hex-case": "upper",
     "color-hex-length": "long",
@@ -33,6 +34,7 @@
     "declaration-block-trailing-semicolon": "always",
     "declaration-colon-newline-after": "always-multi-line",
     "declaration-colon-space-before": "never",
+    "declaration-colon-space-after": "always-single-line",
     "declaration-empty-line-before": [ "always", {
       "except": [
         "after-declaration",
