--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -21,7 +21,6 @@
     "color-hex-length": "long",
     "color-no-invalid-hex": true,
     "comment-no-empty": true,
-    "comment-whitespace-inside": "always",
     "declaration-bang-space-after": "never",
     "declaration-bang-space-before": "always",
     "declaration-block-no-duplicate-properties": true,
@@ -45,9 +44,10 @@
         "inside-single-line-block"
       ]
     } ],
+    "font-family-name-quotes": "always-unless-keyword",
     "function-calc-no-unspaced-operator": true,
     "function-comma-newline-after": "always-multi-line",
-    "function-comma-space-after": "always-single-line",
+    "function-comma-space-after": "always",
     "function-comma-space-before": "never",
     "function-linear-gradient-no-nonstandard-direction": true,
     "function-max-empty-lines": 0,
