Quotes linting was updated

--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -55,6 +55,7 @@
     "function-parentheses-newline-inside": "always-multi-line",
     "function-parentheses-space-inside": "never-single-line",
     "function-whitespace-after": "always",
+    "function-url-quotes": "always",
     "keyframe-declaration-no-important": true,
     "length-zero-no-unit": true,
     "media-feature-colon-space-after": "always",
@@ -83,6 +84,7 @@
     "selector-attribute-brackets-space-inside": "never",
     "selector-attribute-operator-space-after": "never",
     "selector-attribute-operator-space-before": "never",
+    "selector-attribute-quotes": "always",
     "selector-combinator-space-after": "always",
     "selector-combinator-space-before": "always",
     "selector-descendant-combinator-no-non-space": true,
@@ -98,6 +100,7 @@
     "selector-type-case": "lower",
     "selector-type-no-unknown": true,
     "shorthand-property-no-redundant-values": true,
+    "string-quotes": "double",
     "string-no-newline": true,
     "unit-case": "lower",
     "unit-no-unknown": true,
