--- a/package.json
+++ b/package.json
@@ -1,19 +1,18 @@
 {
   "name": "template",
-  "dependencies": {
+  "devDependencies": {
     "del": "2.2.0",
-    "gulp": "3.9.1",
+    "gulp": "4.0.2",
+    "gulp4-run-sequence": "1.0.1",
     "gulp-base64": "0.1.3",
-    "gulp-change": "1.0.0",
-    "gulp-clean-css": "2.0.6",
-    "gulp-plumber": "1.1.0",
-    "gulp-postcss": "6.1.0",
-    "gulp-size": "2.1.0",
-    "gulp-stylelint": "3.9.0",
-    "gulp-svgmin": "1.2.2",
-    "gulp-svgstore": "6.0.0",
-    "postcss-cssnext": "2.8.0",
-    "postcss-sprites": "3.1.2",
-    "run-sequence": "1.2.2"
+    "gulp-change": "1.0.2",
+    "gulp-clean-css": "4.3.0",
+    "gulp-plumber": "1.2.1",
+    "gulp-postcss": "9.0.1",
+    "gulp-size": "4.0.1",
+    "gulp-stylelint": "13.0.0",
+    "gulp-svgmin": "4.1.0",
+    "gulp-svgstore": "9.0.0",
+    "postcss-cssnext": "3.1.1"
   }
 }
